--- a/assets/app.scss
+++ b/assets/app.scss
@@ -46,14 +46,14 @@ $gapHalf: 16pt;
   box-sizing: border-box;
 }
 
-html,
-body {
-  height: 100%;
-}
-
 html {
   -webkit-tap-highlight-color: transparent;
   font-size: 12px;
+}
+
+html,
+body {
+  height: 100%;
 }
 
 body {
@@ -129,7 +129,7 @@ nav.top {
     &:hover {
       width: 190pt;
       .logo {
-        background-position: 1.6rem center;
+        background-position-x: 1.6rem;
       }
     }
     .logo {
@@ -137,9 +137,10 @@ nav.top {
       display: block;
       width: 100%;
       height: 100%;
-      background: url(/icons/logo.svg) no-repeat center;
+      background: url(/icons/logo.svg) no-repeat;
       background-size: 1.5rem;
-      background-position: 0.8rem center;
+      background-position-x: 0.8rem;
+      background-position-y: center;
       transition: all 0.6s cubic-bezier(0.74, 0.12, 0.24, 1.38);
     }
     .alt {
