--- a/assets/app.scss
+++ b/assets/app.scss
@@ -126,6 +126,7 @@ nav.top {
     overflow: hidden;
     background: $primary;
     transition: width 0.4s cubic-bezier(0.74, 0.12, 0.24, 1.38);
+
     &:hover {
       width: 190pt;
       .logo {
@@ -139,14 +140,13 @@ nav.top {
       height: 100%;
       background: url(/icons/logo.svg) no-repeat;
       background-size: 1.5rem;
-      background-position-x: 10px;
-      background-position-y: center;
+      background-position: 10px center;
       transition: background-position-x 0.6s cubic-bezier(0.74, 0.12, 0.24, 1.38);
     }
     .alt {
       margin-left: 35pt;
       color: #fff;
-      font-size: 1.2em;
+      font-size: 2rem;
       line-height: 2;
       font-weight: normal;
       font-family: 'STSong', 'SimSun', 'Times New Roman', Times, serif;
@@ -165,7 +165,6 @@ nav.top {
     line-height: 2;
     .link {
       border: 0;
-
       &:hover {
         background: $background;
         color: $primary;
@@ -357,4 +356,3 @@ footer {
   justify-content: center;
   font-size: 1.1rem;
 }
-
