chore: use cdn fonts library

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,6 +20,8 @@
 
   <!-- Preload -->
   <link rel="preload stylesheet" as="style" href="{{ $css.Permalink }}" />
+  <link rel="preconnect" href="https://fonts.font.im" />
+  <link rel="preconnect" href="https://fonts.gstatic.font.im" crossorigin />
 
   <!-- Favicon -->
   <link rel="icon" href="{{ `favicon.ico` | absURL }}" />
