--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="{{ site.LanguageCode }}">
-    {{- partial "head.html" . -}}
-    <body class="not-ready" data-menu="{{ isset site.Menus `main` }}">
-        {{- partial "header.html" . -}}
-        <main class="content">
-        {{- block "main" . }}{{- end }}
-        </main>
-        {{- partial "nav.html" . -}}
-        {{- partial "footer.html" . -}}
-    </body>
+  {{- partial "head.html" . -}}
+  <body class="not-ready" data-menu="{{ isset site.Menus `main` }}">
+    {{- partial "header.html" . -}}
+    <main class="content">{{- block "main" . }}{{- end }}</main>
+    {{- partial "nav.html" . -}} {{- partial "footer.html" . -}}
+    <link href="https://fonts.font.im/css?family=Noto+Serif+SC&family=Source+Serif+Pro:wght@600&display=swap" rel="stylesheet" />
+  </body>
 </html>
