--- a/assets/app.scss
+++ b/assets/app.scss
@@ -267,7 +267,7 @@ article.archive {
     margin: 10rem 0 0 0;
   }
   h2.year {
-    font-family: source serif pro, noto serif sc, -apple-system, BlinkMacSystemFont, segoe ui, Roboto, Oxygen, Ubuntu, Cantarell, open sans, helvetica neue, sans-serif;
+    font-family: 'Source Serif Pro', 'Noto Serif SC', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-left: $gapHalf + 75pt;
     margin-bottom: 0;
     font-size: 2.7rem;
@@ -303,7 +303,7 @@ article.term {
     margin: 10rem 0 0 0;
   }
   h2.title {
-    font-family: source serif pro, noto serif sc, -apple-system, BlinkMacSystemFont, segoe ui, Roboto, Oxygen, Ubuntu, Cantarell, open sans, helvetica neue, sans-serif;
+    font-family: 'Source Serif Pro', 'Noto Serif SC', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-bottom: 0;
     font-size: 2.7rem;
     color: $accents_3;
