--- a/assets/app.scss
+++ b/assets/app.scss
@@ -269,8 +269,8 @@ article.archive {
   h2.year {
     font-family: 'Source Serif Pro', 'Noto Serif SC', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-left: $gapHalf + 75pt;
-    margin-bottom: 0;
-    font-size: 2.7rem;
+    margin-bottom: 20pt;
+    font-size: 2.4rem;
     color: $accents_3;
   }
   ul.posts {
@@ -281,7 +281,6 @@ article.archive {
       margin-bottom: 20pt;
       time {
         width: 75pt;
-        font-size: 1.66rem;
         color: $accents_2;
       }
       .post-title {
